fix bugs - remove the autoScroll on phone due to its unsatisfying behavior - fix bugs in arrows - fix connection errors and bugs - fix body overflowing issue - make bundle.js more compressed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,7 +69,7 @@ body {
     color: #E6EDF3;
     background-color: #0D1117;
     min-height: 100dvh;
-
+    position: relative;
 }
 
 body * {
@@ -107,6 +107,10 @@ a:hover {
 
 .hide {
     display: none;
+}
+
+.noScroll {
+    overflow: hidden !important;
 }
 
 #tracker {
