--- a/src/css/main.css
+++ b/src/css/main.css
@@ -156,6 +156,11 @@
     transition: outline 100ms ease-in-out;
 }
 
+.sidebar-block-container {
+    width: fit-content;
+    height: fit-content;
+}
+
 .flowchart-block {
     padding: 1rem;
     min-width: 5rem;
